# KRY-Project

./: .gitignore  README.md  main.py  pyproject.toml  testfile.txt
docs/: main.tex
docs/text/: function.tex  gui.tex  installation.tex  intro.tex  structure.tex
file_share/app/: app.py  init_app.py  test_send_file.py
file_share/database/: __init__.py  files.py  keys.py  me.py  users.py
file_share/definitions/: __init__.py  dataclasses.py  enums.py  procedures.py
file_share/friend_finder/: ping_em.py
file_share/receiver/: __init__.py  api_keys.py  get_ip.py  receiver_api.py
file_share/sender/: sender.py  ssl_context.py
