[project]
name = "kry"
version = "0.1.0"
description = "Cryptography project"
authors = [
    {name = "BorekZnovustvoritel", email = "73165420+BorekZnovustvoritel@users.noreply.github.com"},
]
dependencies = [
    "python-multipart>=0.0.9",
    "uvicorn>=0.27.1",
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.28",
    "cryptography>=42.0.5",
    "aiohttp>=3.9.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
